# vvtol

./: .gdbinit  .gitignore  .gitmodules  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  grun.sh  nanopb.options  output_directory.py  platformio.ini  python_toolchain.bzl  remove-submodule.sh  requirements.txt  run.sh
NO/: libinflux_cxx.BUILD
include/: attitude_estimator.hpp  blink_led_task.hpp  continuation_dispatch_vector.hpp  downlink_encoders.tpp  downlink_task.hpp  globals.hpp  gnc_controller.hpp  imu_monitor.hpp  log.hpp  main_control_sm.hpp  main_loop.hpp  pwm_control_task.hpp  simulator_inject.hpp  state_estimator.hpp  state_field_registry.hpp  task.hpp  time_task.hpp  type_defs.hpp  vector_defs.hpp  vvtol_constants.hpp  wait_for_and_action.hpp
include/common/: stats.hpp
include/mav/: .gitignore  BUILD.bazel  README.md  sfr.xml  sfr_mavlink.xml
include/mav/mavgen/sfr/: gtestsuite.hpp  mavlink.h  mavlink_msg_state_field_registry.h  mavlink_msg_state_field_registry.hpp  sfr.h  sfr.hpp  testsuite.h  version.h
include/nanopb/: BUILD.bazel  state_field_registry.pb.c  state_field_registry.pb.h
include/nanopb_NOUSE/: README.md  state_field_registry.proto
include/protos/: BUILD.bazel  state_field_registry.pb.cc  state_field_registry.pb.h  state_field_registry.proto  state_field_registry_pb2.py
lib/nanopb/: state_field_registry.pb.c  state_field_registry.pb.h  state_field_registry.proto  state_field_registry_pb2.py
psrc/: mavgen.py  setup.py
psrc/mavgen/: README.md  sfr_mavlink.py
psrc/scripts/: air_proto_reader.py  gl_render.py  mav_read.py  proto_reader.py  static_render.py  teensy_air_proto_reader.py  teensy_influx.py  vis_render.py
psrc/sfr_gen/: sfr_gen.py
psrc/telem/: air_proto_decoder.py  influx_writer.py
scripts/: build_40.sh  build_all.sh  build_hootl.sh  cog.sh  grafana.sh  install-panel.sh  launch_3js.sh  launch_40.sh  launch_40_radio.sh  launch_hootl.sh  pb_build.sh  run_dev.sh
src/: log.cpp  main.cpp  main_control_sm.cpp  main_loop.cpp  time_task.cpp
src/air_nano_proto/: BUILD.bazel  air_nano_proto.cpp  air_nano_proto.hpp
src/air_proto/: BUILD.bazel
src/common/: BUILD.bazel  air_proto.cpp  air_proto.hpp  globals.cpp  state_field_registry.pb.cc  stats.cpp
src/native_only/: named_pipe_manager.cpp  named_pipe_manager.hpp
src/targets/: air_nano_proto_writer.cpp  air_proto_writer.cpp  bno055_harness.cpp  cpp_influx_writer.cpp  imu_harness.cpp  main.cpp  mav_pipe_write.cpp  struct_serialize.cpp  teensy_blink.cpp  teensy_esc_motor.cpp  teensy_servo.cpp  v1_writer.cpp
src/tasks/: attitude_estimator.cpp  blink_led_task.cpp  downlink_task.cpp  gnc_controller.cpp  imu_monitor.cpp  log.cpp  main_control_sm.cpp  main_loop.cpp  pwm_control_task.cpp  simulator_inject.cpp  state_estimator.cpp  time_task.cpp
vis/: README.md  render.ipynb
vis/.ipynb_checkpoints/: render-checkpoint.ipynb
web/: main.js
web/vvtol-vvtol-panel/: docker-compose.yaml  package-lock.json  package.json
web/vvtol-vvtol-panel/.github/workflows/: ci.yml
web/vvtol-vvtol-panel/provisioning/dashboards/: dashboard.json  default.yaml
web/vvtol-vvtol-panel/src/: README.md  plugin.json
web/vvtol-vvtol-panel/src/components/: SimplePanel.tsx  axesHelpers.ts  useThreeJS.ts  vehicleTraceHelpers.ts
web/vvtol-vvtol-panel/tests/: panel.spec.ts
web_g/: app.js  index.html
