# Load the cc_proto_library rule if your setup requires it.
# This is typically required for older versions or specific setups.


cc_binary(
    name = "send_data",
    srcs = ["src/targets/struct_serialize.cpp"],
    deps = [
        ":state_field_registry_cc_proto",
        # Depending on your setup, you might need to specify protobuf dependencies here.
        # For example, "@com_google_protobuf//:protobuf",
    ],
    # You may not need the copts line depending on your setup and how the protobuf headers are included.
    # copts = ["-Iexternal/com_google_protobuf/src"],
)

cc_binary(
    name = "air_proto_writer",
    srcs = ["src/targets/air_proto_writer.cpp"],
    deps = [
        "//include/protos:state_field_registry_cc_proto",
        "//src/air_proto:air_proto"
    ],
)

cc_binary(
    name = "air_nano_proto_writer",
    srcs = ["src/targets/air_nano_proto_writer.cpp"],
    deps = [
        # ":state_field_registry_cc_proto",
        "//include/nanopb:nanopb_airproto_sfr",
        "//src/air_nano_proto:air_nano_proto"
    ],
)


cc_binary(
    name = "mav_pipe_write",
    srcs = ["src/targets/mav_pipe_write.cpp"],
    deps = [
        "//include/mav:mavlink_headers"
        # Depending on your setup, you might need to specify protobuf dependencies here.
        # For example, "@com_google_protobuf//:protobuf",
    ],
)


cc_binary(
    name = "cpp_influx_writer",
    srcs = ["src/targets/cpp_influx_writer.cpp"],
    deps = [
        "@libinflux_cxx//:libinflux_cxx"
        # "//external:libinflux_cxx",  # This assumes your cmake rule is in the external directory
    
        # "//thirdparty:influxdb-cpp-headers"
        # "//include/mav:mavlink_headers",
        # "@libinflux_cxx//:libinflux_cxx"
        #  "//bazel/external:libinflux_cxx"
        # Depending on your setup, you might need to specify protobuf dependencies here.
        # For example, "@com_google_protobuf//:protobuf",
    ],

    # this is so sinful
    # copts = [
    #     "-I/usr/local/include",  # Only necessary if headers are in non-standard locations
    # ],
    # linkopts = [
    #     "-libInfluxDB.so",
    # ]
)

